# PypeIt

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGES.rst  CITATION.cff  LICENSE.rst  MANIFEST.in  README.md  README.rst  RELEASES.md  TODO  TODO.md  checkout_current_tag  environment-test.yml  environment.yml  p200_arm_redux.py  p200_redux.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements_doc.txt  setup.cfg  setup.py  setup_cython.py  shane_kast_blue.calib  shane_kast_blue.lst  sphinx.readme  table_edit.py  tmp.sorted  tox.ini  update_docs
.eggs/: pytest_runner-2.11.1-py3.6.egg
.github/workflows/: ci_cron.yml  ci_tests.yml
MF_shane_kast_blue/: MasterSensFunc_C_aa.yaml
data/arc_lines/: NIST_lines.ipynb  kast_blue.lst  rejected_lines.yaml
data/sky_spec/: paranal_sky.fits  sky_kastb_600.fits
deprecated/: ararclines.py  arc_old.py  artrace.py  coadd.py  combine.py  data_utils.py  datacube.py  extract.py  filter.py  find_objects.py  flat.py  flux.py  masters.py  old_ech_objfind.py  par.py  processimages.py  procimg.py  pydl.py  ql_keck_lris.py  ql_multislit.py  reduce.py  sensfunc.py  trace_slits.py
doc/: 2d_combine.rst  A-B_differencing.rst  Makefile  api.rst  bias.rst  bias_dark.rst  bias_image.rst  bias_sub.rst  bitmasks.rst  calcheck.rst  calib_images.rst  calibrations.rst  coadd1d.rst  coadd2d.rst  coadd2d_howto.rst  coadd3d.rst  coadding.rst  code_flow.rst  codeconduct.rst  collate1d.rst  conf.py  construct_template.rst  conventions.rst  cookbook.rst  customize_calibs.rst  deimos.rst  deimos_howto.rst  detectors.rst  dev_suite.rst  development.rst  edge_traces.rst  extraction.rst  flat_fielding.rst  flatfielding.rst  flexure.rst  flow.rst  fluxing.rst  frametype.rst  gemini_flamingos2.rst  gemini_gmos.rst  (+231 more)
doc/_templates/: layout.html
doc/api/: modules.rst  pypeit.alignframe.rst  pypeit.ararclines.rst  pypeit.archive.rst  pypeit.arcimage.rst  pypeit.artrace.rst  pypeit.astrometry.rst  pypeit.biasframe.rst  pypeit.bitmask.rst  pypeit.bspline.bspline.rst  pypeit.bspline.rst  pypeit.bspline.setup_package.rst  pypeit.bspline.utilc.rst  pypeit.bspline.utilpy.rst  pypeit.cache.rst  pypeit.calibframe.rst  pypeit.calibrations.rst  pypeit.check_requirements.rst  pypeit.coadd1d.rst  pypeit.coadd2d.rst  pypeit.coadd3d.rst  pypeit.compiler_version.rst  pypeit.core.arc.rst  pypeit.core.basis.rst  pypeit.core.coadd.rst  pypeit.core.coadd1d.rst  pypeit.core.coadd2d.rst  pypeit.core.collate.rst  pypeit.core.combine.rst  pypeit.core.convert_DEIMOSsavfiles.rst  pypeit.core.datacube.rst  pypeit.core.extract.rst  pypeit.core.findobj_skymask.rst  pypeit.core.fitting.rst  pypeit.core.flat.rst  pypeit.core.flexure.rst  pypeit.core.flux.rst  pypeit.core.flux_calib.rst  pypeit.core.framematch.rst  pypeit.core.gui.edge_inspector.rst  (+238 more)
doc/calibrations/: align.rst  alignment.rst  arc.rst  bias.rst  bias_dark.rst  calibrations.rst  construct_template.rst  dark.rst  edges.rst  flat.rst  flat_fielding.rst  flexure.rst  heliocorr.rst  image_proc.rst  master_align.rst  master_arc.rst  master_bias.rst  master_dark.rst  master_edges.rst  master_flat.rst  master_slits.rst  master_tilt.rst  master_tilts.rst  master_wvcalib.rst  masters.rst  nonlinear.rst  scattlight.rst  slit_tracing.rst  slits.rst  tilt.rst  tilts.rst  wave_calib.rst  wavetilts.rst  wvcalib.rst
doc/comparisons/: PYPIT_vs_LowRedux_LRISr.ipynb  pypit_vs_lowredux.py
doc/demos/: GMOS_CGM2_mask.ipynb  GMOS_longslit.ipynb  LRISr_longslit.ipynb  LRISr_longslit.py
doc/dev/: add_missing_obj.rst  build_archived_sensfuncs.rst  conda_forge.rst  deimos_add_missing_obj.rst  deimos_radec_object.rst  deimos_slitmask_ids.rst  deimos_wavecalib.rst  deimosconfig.rst  deimosframes.rst  development.rst  fluxing.rst  hiresconfig.rst  (+14 more)
examples/: default.cfg  merged.cfg  parset_demo.ipynb  user.cfg
licenses/: PYDL_LICENSE.rst
paper/: astropy.txt  paper.bib  paper.md
pypeit/: __init__.py  _version.py  alignframe.py  ararclines.py  archive.py  arcimage.py  arcoadd.py  ardebug.py  ardevtest.py  armbase.py  armed.py  arms.py  artrace.py  barframe.py  biasframe.py  bitmask.py  bpmimage.py  cache.py  calibframe.py  calibrations.py  check_requirements.py  coadd1d.py  coadd2d.py  coadd3d.py  datamodel.py  debugger.py  defs.py  ech_coadd.py  ech_fluxspec.py  edgetrace.py  extraction.py  find_objects.py  fitsmetadata.py  flatfield.py  fluxcalibrate.py  fluxspec.py  ginga.py  history.py  inputfiles.py  io.py  (+45 more)
pypeit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypit/: __init__.py  _version.py  ararc.py  ararclines.py  arcalib.py  archeck.py  arcimage.py  arcoadd.py  arcomb.py  arcyarc.pyx  arcycomb.pyx  arcycomb_setup.py  arcyextract.pyx  arcyextract_setup.py  arcyproc.pyx  arcytrace.pyx  arcyutils.pyx  ardebug.py  ardeimos.py  ardeimos_jfh.py  ardeimos_old.py  ardevtest.py  arextract.py  arflux.py  arhtml.py  arload.py  arlris.py  armasters.py  armbase.py  armed.py  armeta.py  armlsd.py  arms.py  armsgs.py  arparse.py  arpca.py  arpixels.py  arplot.py  arproc.py  arqa.py  (+42 more)
pypit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ararc.py  ararclines.py  arcomb.py  arcyarc.pyx  arcyarc_setup.py  arcycomb.pyx  arcycomb_setup.py  arcyextract.pyx  arcyextract_setup.py  arcyproc.pyx  arcyproc_setup.py  arcytrace.pyx  arcytrace_setup.py  arcyutils.pyx  arcyutils_setup.py  ardebug.py  arextract.py  arflux.py  ario.py  arload.py  arlris.py  armasters.py  armbase.py  armed.py  armlsd.py  armlsd_old.py  armsgs.py  aroutput.yml  arparse.py  arpca.py  arplot.py  arproc.py  arqa.py  arsave.py  arsciexp.py  arsort.py  arspecobj.py  artrace.py  arutils.py  arvcorr.py  (+13 more)
test_suite/: PYPIT_vs_LowRedux.ipynb  PYPIT_vs_LowRedux_LRISb.ipynb  PYPIT_vs_LowRedux_LRISr.ipynb  README  kast_blue_600_4310_d55.pypit  kast_blue_600_4310_d55.red  kast_red_600_7500_d55.pypit  kast_red_600_7500_d55.red  lris_blue_long_400_3400_d560.pypit  lris_blue_long_600_4000_d560.pypit  lris_blue_long_600_4000_d560.red  lris_red_long_600_7500_d560.pypit  lris_red_long_600_7500_d560.red  pypit_vs_lowredux.py  run_pypit_tests.py
(+1611 files in other folders)
